--- a/_posts/2020-03-11-dataops.md
+++ b/_posts/2020-03-11-dataops.md
@@ -24,8 +24,7 @@ and forget model deployment the model is never adjusted or updated.
 We need a method where models can provide quick predictions, these predictions and raw data are logged,
 model drift can be monitored, and new models can be tested and when ready integrated.  We need
 **DATAOPS**.  An example of a DataOps architecture is shown below.  Admittedly most of this is
-not my idea and was presented in the book [*The Rendezvous Architecture for Machine Learning*]
-(https://mapr.com/ebooks/machine-learning-logistics/ch03.html) by Ted Dunning and Ellen Friedman.
+not my idea and was presented in the book [The Rendezvous Architecture for Machine Learning](https://mapr.com/ebooks/machine-learning-logistics/ch03.html) by Ted Dunning and Ellen Friedman.
 
 ![Data Ops]({{site.url}}/images/blog/2020-03-11/dataops.png)
 
