added portfolio to nav bar

--- a/_posts/2020-05-11-tst.md
+++ b/_posts/2020-05-11-tst.md
@@ -1,5 +1,5 @@
 ---
-title: "Hello World"
+title: "TST 1"
 date: 2020-05-11
 excerpt: "Hello World, a brief overview of what I hope to accomplish in this blog."
 ---
